@@ -64,7 +64,7 @@ release = '1.0'
 
 # List of patterns, relative to source directory, that match files and
 # directories to ignore when looking for source files.
-exclude_patterns = []
+exclude_patterns = ['examples']
 
 # The reST default role (used for this markup: `text`) to use for all documents.
 #default_role = None
