@@ -9,6 +9,9 @@ Changes
 - New version of impressConsole that includes styling of the previews and
   a goto command <G>.
 
+- ``:css-console:`` and ``:css-preview:`` added to style the console and
+  add extra styles in the previews.
+
 
 2.4 (2017-07-18)
 ----------------
